Ménage continue plus détails CNN

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 3-Abstract.aux
 2-Remerciements.aux
 1-Dedicace.aux
+2025_PaulCharbonneau_Memoire_MSc.blg
+2025_PaulCharbonneau_Memoire_MSc.bbl
+2025_PaulCharbonneau_Memoire_MSc.toc
