Ménage des archives non nécessaires

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 2025_PaulCharbonneau_Memoire_MSc.bbl
 2025_PaulCharbonneau_Memoire_MSc.toc
 name.tex
+Archive/Mvst_compile.synctex.gz
+Archive/Mvst_compile.pdf
+Archive/Mvst_compile.log
+__latexindent_temp_6-Revue_litterature.tex
+.gitignore
