--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Archive/Mvst_compile.pdf
 Archive/Mvst_compile.log
 __latexindent_temp_6-Revue_litterature.tex
 .gitignore
+2025_PaulCharbonneau_Memoire_MSc-2024-07-09.pdf
