Update: split litterature review to make it easier to debug. Had open citation that made it crash

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ Archive/Mvst_compile.log
 __latexindent_temp_6-Revue_litterature.tex
 .gitignore
 2025_PaulCharbonneau_Memoire_MSc-2024-07-09.pdf
+6-0-Revue-typologie.aux
+6-1-Revue-stat-mobilite.aux
+6-2-Revue-stat-inventaire.aux
+6-3-Revue-AM.aux
+6-0-Revue-typologie.tex
+2025_PaulCharbonneau_Memoire_MSc.synctex(busy)
