Création de la table de synthèse des requis par utilisation du sol

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ __latexindent_temp_6-Revue_litterature.tex
 6-3-Revue-AM.aux
 6-0-Revue-typologie.tex
 2025_PaulCharbonneau_Memoire_MSc.synctex(busy)
+data/data_n_requis_CUBF.csv
